cabal-version:  2.4

name:           fc-lh
version:        0.1.0.0
build-type:     Simple

library
  exposed-modules:
      Util.EquationalExt,
      MyBool,
      MyNat,
      MyList,
      MyAB
  hs-source-dirs:
      src
  build-depends:
      base          == 4.16.4.0,      
      liquidhaskell == 0.9.2.5.0,
      liquid-prelude      
  default-language: Haskell2010
  ghc-options: -fplugin=LiquidHaskell
